correct spacing

--- a/styles/main.css
+++ b/styles/main.css
@@ -56,6 +56,7 @@ a:hover {
     border:#6f736f double .25em;
     width: 18vw;
     transition: width 1s;
+    margin-left: 40px;
 }
 
 #one h2{
